--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,6 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6291ae">  <td>23/04/26 19:51:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClass.searchFlight()[pri:0, instance:testngdisc.TestClass@57cf54e1]">searchFlight</td> 
-  <td>main@1579957528</td>   <td></td> </tr>
+<tr bgcolor="8aa092">  <td>23/04/29 19:59:53</td>   <td>0</td> <td title="&gt;&gt;BaseTest.initBrowser()[pri:0, instance:testclasses.SearchTest@4d5650ae]">&gt;&gt;initBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@225672073</td>   <td></td> </tr>
+<tr bgcolor="8aa092">  <td>23/04/29 20:00:17</td>   <td>24302</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.createObject()[pri:0, instance:testclasses.LoginTest@25641d39]">&gt;&gt;createObject</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@225672073</td>   <td></td> </tr>
+<tr bgcolor="aad5d5">  <td>23/04/29 20:00:17</td>   <td>24304</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.validateTitle()[pri:2, instance:testclasses.LoginTest@25641d39]">validateTitle</td> 
+  <td>main@225672073</td>   <td></td> </tr>
+<tr bgcolor="8aa092">  <td>23/04/29 20:00:08</td>   <td>14845</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.createObject()[pri:0, instance:testclasses.SearchTest@4d5650ae]">&gt;&gt;createObject</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@225672073</td>   <td></td> </tr>
+<tr bgcolor="aad5d5">  <td>23/04/29 20:00:17</td>   <td>24350</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginToApp()[pri:3, instance:testclasses.LoginTest@25641d39]">loginToApp</td> 
+  <td>main@225672073</td>   <td></td> </tr>
+<tr bgcolor="97b078">  <td>23/04/29 20:00:08</td>   <td>15145</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchTest.searchValidation()[pri:1, instance:testclasses.SearchTest@4d5650ae]">searchValidation</td> 
+  <td>main@225672073</td>   <td></td> </tr>
 </table>
